リダイレクト修正 フロートウィンドウCSSを元に戻した

--- a/help/webroot/css/appstyle.css
+++ b/help/webroot/css/appstyle.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+charset "UTF-8";
 /* ヘルプアプリケーション */
 /*	padding: 0px 10px;	/* [上下左右] [上下][左右} [上][左右][下] [上][右][下][左] */
 .contents-view {
