--- a/app/help/View/res/css/tabmenu.css
+++ b/app/help/View/res/css/tabmenu.css
@@ -44,6 +44,7 @@
     position: relative;
     float:left;
     width: 100%;
+    height:100%;
     margin-top:2em;
 }
 .content-panel ul {
@@ -53,14 +54,18 @@
     clear:both;
     float:left;
     width: 96%;
-    padding-left:20px;
     height:100%;
+    padding-left:20px;
     padding-bottom:10px;
 }
 .content-panel .content:after {
     clear:both;
 }
-.content-panel .content li{padding:0;}
+.content-panel .content li{
+    width:100%;
+    height:100%;
+    padding:0;
+}
 .content-panel .hide {display:none;}
 .content-panel .content li#blueback {background:#eef;}
 .content-panel .content li#grayback {background:#eee;}
