--- a/app/help/webroot/css/appstyle.css
+++ b/app/help/webroot/css/appstyle.css
@@ -1,36 +1,6 @@
 @charset "UTF-8";
 /* ヘルプアプリケーション */
 /*	padding: 0px 10px;	/* [上下左右] [上下][左右} [上][左右][下] [上][右][下][左] */
-* {
-    position: relative;
-    margin: 0;
-    padding: 0;    
-}
-html, body {
-    height: 100%;
-    min-height: 100%;
-    font-size:10pt;
-}
-.appWindow {
-    position:fixed;
-    width: 100%;
-    min-width: 100%;
-    height: 100%;
-    min-height: 100%;
-/*
-    user-select:none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-*/
-}
-.icon {
-    margin: 0 2px;
-    cursor:pointer;
-    box-shadow: 1px 1px 2px #000;
-    background: linear-gradient(to bottom, white, silver);
-}
-
 .contents-view {
     height:100%;
     width:100%;
@@ -39,16 +9,31 @@ html, body {
     overflow-x:hidden;
 }
 
+.section {
+    width:100%;
+    height:100%;
+    padding-left:10px;
+}
 .paragraph p {
-    padding-left:20px;
+    padding-left:10px;
     margin-bottom:10px;
 }
-
-.dialog-data {
+/*
+フロートウィンドウのパネル
+*/
+.dialog-view {
+    height:100%;
     width:100%;
-    padding:10px;
+    background-color: white;
+    overflow-y:scroll;
+    overflow-x:hidden;
 }
-.dialog-data .center {
+.dialog-view .dialog-panel {
+    top:0;
+    width:100%;
+    height:100%;
+}
+.dialog-view .dialog-panel .center {
     width:100%;
     text-align: center;
     padding: 5px;
