--- a/app/pcenv/View/res/css/sitemap.css
+++ b/app/pcenv/View/res/css/sitemap.css
@@ -1,20 +1,22 @@
 /*	ツリーメニューの表示用　*/
 /* [上下左右] [上下][左右} [上][左右][下] [上][右][下][左] */
+/*
 .sitemap {
-    position: relative;
+    background-color: white;
  }
+ */
 .sitemap .boldtxt a {
     color: white;
     font-weight:bold;
     text-decoration: none;
 }
 .sitemap .title {
-    text-align: center;
-    font-size: 10pt;
+    width:100%;
     height:2em;
     color: white;
+    text-align: center;
+    font-size: 10pt;
     background-color: gray;
-    width:100%;
 }
 
 .nounder,.file,.folder {
