--- a/app/help/View/res/css/tabmenu.css
+++ b/app/help/View/res/css/tabmenu.css
@@ -41,6 +41,10 @@
     width: 100%;
     height:100%;
     margin-top:2em;
+    user-select:text;
+    -moz-user-select: text;
+    -webkit-user-select: text;
+    -ms-user-select: text;
 }
 .content-panel ul {
 	list-style:none;
