--- a/app/pcenv/View/res/css/tabmenu.css
+++ b/app/pcenv/View/res/css/tabmenu.css
@@ -44,6 +44,10 @@
     float:left;
     width: 100%;
     margin-top:2em;
+    user-select: text;;
+    -moz-user-select: text;
+    -webkit-user-select: text;
+    -ms-user-select: text;    
 }
 .content-panel ul {
 	list-style:none;
