select => selected に統一 RecordFinderにソート引数を追加 AppViewにインラインセクション定義を追加 Updata/Insert/Delete SQLを追加

--- a/Core/Template/res/css/debugbar.css
+++ b/Core/Template/res/css/debugbar.css
@@ -24,7 +24,7 @@
     cursor:pointer;
     font-size:9pt;
 }
-.debugtab ul#debugMenu li.select {
+.debugtab ul#debugMenu li.selected {
     background: #333;
 }
 /* メッセージ表示パネル */
