--- a/app/help/webroot/css/appstyle.css
+++ b/app/help/webroot/css/appstyle.css
@@ -8,15 +8,33 @@
     overflow-y:scroll;
     overflow-x:hidden;
 }
-
+/*  セクション部分の表示 */
 .section {
     width:100%;
     height:100%;
     padding-left:10px;
-}
-.paragraph p {
-    padding-left:10px;
     margin-bottom:10px;
+}
+.section .title {
+    width:100%;
+}
+.section .description {
+    width:90%;
+    margin:10px 0;
+    padding-left:10px;
+}
+/*  パラグラフ部の表示 */
+.paragraph {
+    margin-top:20px;
+    margin-bottom:10px;
+}
+.paragraph .caption {
+    width:100%;
+}
+.paragraph .data {
+    width:70%;
+    padding-left:20px;
+    margin:10px 0;
 }
 /*
 フロートウィンドウのパネル
@@ -28,12 +46,12 @@
     overflow-y:scroll;
     overflow-x:hidden;
 }
-.dialog-view .dialog-panel {
+.dialog-view .dialog-form {
     top:0;
     width:100%;
     height:100%;
 }
-.dialog-view .dialog-panel .center {
+.dialog-view .dialog-form .center {
     width:100%;
     text-align: center;
     padding: 5px;
