--- a/app/help/webroot/css/appstyle.css
+++ b/app/help/webroot/css/appstyle.css
@@ -5,7 +5,7 @@
     height:100%;
     width:100%;
     background-color: white;
-    overflow-y:scroll;
+    overflow-y:auto;
     overflow-x:hidden;
 }
 /*  セクション部分の表示 */
@@ -23,6 +23,12 @@
     margin:10px 0;
     padding-left:10px;
 }
+.tabmenu ul.tab li.add-section {
+    color:gray;
+    font-style: bold;
+    text-align:center;
+}
+
 /*  パラグラフ部の表示 */
 .paragraph {
     margin-top:20px;
@@ -43,7 +49,7 @@
     height:100%;
     width:100%;
     background-color: white;
-    overflow-y:scroll;
+    overflow-y:auto;
     overflow-x:hidden;
 }
 .dialog-view .dialog-form {
@@ -54,5 +60,5 @@
 .dialog-view .dialog-form .center {
     width:100%;
     text-align: center;
-    padding: 5px;
+    margin:10px;
 }
