新しいセクション形式に合わせてレイアウト修正

--- a/app/help/View/res/css/sitemap.css
+++ b/app/help/View/res/css/sitemap.css
@@ -10,7 +10,7 @@
     text-decoration: none;
 }
 .sitemap .title {
-    text-align: center;
+/*    text-align: center;*/
     font-size: 10pt;
     height:2em;
     color: white;
