--- a/app/help/View/res/css/toolbar.css
+++ b/app/help/View/res/css/toolbar.css
@@ -44,7 +44,7 @@
     float: left;
     list-style-type: none;
 }
-#toolbar ul#menu a {
+#toolbar ul#menu a, .menuitem {
     color: black;              /* メニュー項目の文字色 */
     line-height: 35px;         /* メニュー項目のリンクの高さ（「メニュー項目の高さ」と一致させる） */
     text-align: center;        /* メインメニューの文字列の配置（中央寄せ） */
@@ -53,7 +53,7 @@
 	width: 100%;
     height: 100%;
 }
-#toolbar ul#menu a:hover {
+#toolbar ul#menu a:hover, .menuitem:hover {
 	background-color: #eeeeee; /* メニュー項目にマウスが載ったときの背景色 */
 	color: #00cc00;            /* メニュー項目にマウスが載ったときの文字色 */
 }
