コンパクトモードのバグ修正

--- a/app/help/webroot/css/appstyle.css
+++ b/app/help/webroot/css/appstyle.css
@@ -45,6 +45,7 @@
 /*
 フロートウィンドウのパネル
 */
+/*
 .dialog-view {
     height:100%;
     width:100%;
@@ -62,3 +63,4 @@
     text-align: center;
     margin:10px;
 }
+*/
