--- a/Core/Template/res/css/floatwin.css
+++ b/Core/Template/res/css/floatwin.css
@@ -112,27 +112,45 @@
     filter:alpha(opacity=40);
 }
 /* 実行ボタン */
-.floatWindow .execButton {
+.floatWindow .execButton,
+.floatWindow .closeButton
+{
+    margin: 0 15px;
 	border-top: 1px solid #ccc;
 	border-right: 1px solid #999;
 	border-bottom: 1px solid #999;
 	border-left: 1px solid #ccc;
-	padding: 2px 8px;
+	padding: 2px 12px;
 	font-weight: bold;
 	font-size:9pt;
 	cursor: pointer;
 	color: #666;
 	border-radius: 2px;
-	text-shadow: 0 -1px 1px #FFF, -1px 0 1px #FFF, 1px 0 1px #aaa;
-	box-shadow: 1px 1px 2px #E7E7E7;
-	background: -moz-linear-gradient(top, #fff, #F1F1F1 1%, #F1F1F1 50%, #DFDFDF 99%, #ccc);
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(0.01, #F1F1F1), color-stop(0.5, #F1F1F1), color-stop(0.99, #DFDFDF), to(#ccc));
+/*	text-shadow: 0 -1px 1px #FFF, -1px 0 1px #FFF, 1px 0 1px #ccc;
+*/	box-shadow: 1px 1px 2px #E7E7E7;
+    background: linear-gradient(#f1f1f1,#dfdfdf, #ccc);
 }
-.floatWindow .execButton:hover {
-	background: -moz-linear-gradient(top, #fff, #e1e1e1 1%, #e1e1e1 50%, #cfcfcf 99%, #ccc);
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(0.01, #e1e1e1), color-stop(0.5, #e1e1e1), color-stop(0.99, #cfcfcf), to(#ccc));
+.floatWindow .execButton:hover,
+.floatWindow .closeButton:hover
+ {
+    color:white;
+    background: linear-gradient(#333,#888, #333);
 }
-.floatWindow .execButton:active {
+.floatWindow .execButton:active,
+.floatWindow .closeButton:active
+{
 	background: #aaa;  
 	padding: 6px 10px 4px;  
+}
+.floatWindow .center {
+    margin-top:10px;
+    width:100%;
+    text-align: center;
+}
+.floatWindow .center hr {
+    width:90%;
+    height:1px;
+    border:none;
+    border-top:dashed 1px gray;
+    margin:10px auto;
 }
