新スタイル処理をマージ

--- a/Core/Template/res/css/debugbar.css
+++ b/Core/Template/res/css/debugbar.css
@@ -14,15 +14,16 @@
 }
 /* メニュー表示 */
 .debugtab ul#debugMenu {
-    padding-left:28px;
-    overflow: hidden;
     min-width: 800px;
+    padding-left:28px;
     user-select: none;
+    overflow: hidden;
 }
 .debugtab ul#debugMenu li {
+    height:16px;
     list-style:none;
     float:left;
-    padding:2px 10px;
+    padding:6px 10px 2px;
     cursor:pointer;
     font-size:9pt;
 }
