置換処理のバグ修正 マーキング処理を関数化

--- a/app/help/View/res/css/activity.css
+++ b/app/help/View/res/css/activity.css
@@ -18,6 +18,9 @@
 .find_result {
     padding-left: 20px;
 }
+.find_result a {
+    font-weight: bold;
+}
 .find_result h2 {
     width:80%;
     border-bottom: 1px solid black;
