--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -75,16 +75,16 @@ pre.code {
 .md_tbl {
 	padding-left:10px;
 	border-collapse: collapse;
-	border:1px solid black;
+	border:1px solid silver;
 }
 .md_tbl th {
 	text-align: center;
-	background-color: #ddd;
-	border: 1px solid black;
+	background-color: #eee;
+	border: 1px solid silver;
 	padding: 0 10px;
 }
 .md_tbl td {
-	border: 1px solid black;
+	border: 1px solid silver;
 	padding: 0 10px;
 }
 
