--- a/Core/Template/res/css/baloon.css
+++ b/Core/Template/res/css/baloon.css
@@ -212,6 +212,10 @@ span.help_icon.mouseover {
     padding:0 8px 4px 22px;
     color:black;
     background: url(res/img/confirm.png) no-repeat left top;
+/*
+    color:white;
+    background-color: linear-gradient(-90deg,#ccc,#aaa,#000);
+*/
 }
 .dialog-box .dialog-msg {
     position:relative;
@@ -224,10 +228,10 @@ span.help_icon.mouseover {
     width:100%;
     height:1.2em;
     bottom:0;
-    text-align: left;
+    text-align: center;
     padding: 15px 5px;
     margin:auto;
-    background-color: #f1f1f1;
+/*    background-color: #f1f1f1;*/
 }
 /* 実行ボタン */
 .dialog-box .buttonList .okButton,
