--- a/Core/Template/res/css/markdown.css
+++ b/Core/Template/res/css/markdown.css
@@ -55,7 +55,7 @@
 */
 .easy_markdown .bq_block,
 .easy_markdown .bq_block blockquote {
-	margin-left:10px;
+	margin: 5px 0 5px 10px;
 	padding:5px 0 2px 10px;
 	border-left: 6px solid silver;
 	background-color:white;
