--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -31,6 +31,7 @@ html, body {
 }
 
 .button	{
+	z-index:1;
 	border-top: 1px solid #ccc;
 	border-right: 1px solid #999;
 	border-bottom: 1px solid #999;
@@ -40,6 +41,7 @@ html, body {
 	font-size:9pt;
 	cursor: pointer;
 	color: #666;
+	text-align:center;
 	border-radius: 2px;
 	text-shadow: 0 -1px 1px #FFF, -1px 0 1px #FFF, 1px 0 1px #aaa;
 	box-shadow: 1px 1px 2px #E7E7E7;
@@ -52,5 +54,4 @@ html, body {
 }
 .button:active {
 	background: #aaa;  
-	padding: 6px 10px 4px;  
 }
