--- a/Core/Template/res/css/tabset.css
+++ b/Core/Template/res/css/tabset.css
@@ -18,7 +18,7 @@ display:flex;
 .tabControll>ul.tabmenu:after {
     clear:both;
 }
-.tabControll>ul.tabmenu li {
+.tabControll>ul.tabmenu>li {
     float:left;
     height:1.5em;
 	padding: 0 20px; 
