--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -17,10 +17,12 @@ html, body {
     min-width: 100%;
     height: 100%;
 	min-height: 100%;
+/*
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+*/
 }
 
 .icon {
