--- a/Core/Template/res/css/tabset.css
+++ b/Core/Template/res/css/tabset.css
@@ -1,15 +1,21 @@
 /*	padding: 0px 10px;	/* [上下左右] [上下][左右} [上][左右][下] [上][右][下][左] */
 .tabset {
-display:flex;
+    display:flex;
+    width:100%;
+    height: 100%;
 }
 /* タブ表示用 */
-/*
+
 .tabControll {
+    width:100%;
+    padding:0;
+/*
     background-color:whitesmoke;
     border-bottom: 1px dotted gray;
     border-right: 1px dotted red;
-}
 */
+}
+
 .tabControll>ul.tabmenu {
     float:left;
 	list-style:none;
@@ -40,7 +46,8 @@ display:flex;
 /* タブコンテンツ */
 .tabControll>ul.tabcontents {
     clear:both;
-    width: 100%;
+    height: 88%;
+    padding:10px;
 	list-style:none;
     border: 1px dotted gray;
 }
