--- a/Core/Template/res/css/markdown.css
+++ b/Core/Template/res/css/markdown.css
@@ -3,6 +3,12 @@
 	padding:0;
 	overflow-x:hidden;
 }
+.easy_markdown a.externalLink {
+  display: inline-block;
+  padding-right: 20px;
+  background: url(res/img/icon_external.png) no-repeat right center;
+}
+
 /* CODE viewing 
 */
 .easy_markdown pre {
