--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* フレームワークの基本スタイル */
-/*	padding: 0px 10px;	/* [上下左右] [上下][左右} [上][左右][下] [上][右][下][左] */
+/*	[上下左右] [上下][左右} [上][左右][下] [上][右][下][左] */
 * {
     position: relative;
     margin: 0;
@@ -17,14 +17,14 @@ html, body {
     min-width: 100%;
     height: 100%;
 	min-height: 100%;
-/*
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
-*/
 }
-
+.appWindow * {
+	box-sizing: border-box;
+}
 .icon {
     margin: 0 2px;
     cursor:pointer;
