--- a/Core/Template/res/css/debugbar.css
+++ b/Core/Template/res/css/debugbar.css
@@ -20,10 +20,10 @@
     overflow: hidden;
 }
 .debugtab ul#debugMenu li {
-    height:16px;
+    height:1.8em;
     list-style:none;
     float:left;
-    padding:5px 10px 2px;
+    padding:0 10px 0;
     cursor:pointer;
     font-size:9pt;
 }
