--- a/Core/Template/res/css/tabset.css
+++ b/Core/Template/res/css/tabset.css
@@ -1,11 +1,5 @@
 /*	padding: 0px 10px;	/* [上下左右] [上下][左右} [上][左右][下] [上][右][下][左] */
-.tabset {
-    display:flex;
-    width:100%;
-    height: 100%;
-}
 /* タブ表示用 */
-
 .tabControll {
     width:100%;
     padding:0;
@@ -15,16 +9,18 @@
     border-right: 1px dotted red;
 */
 }
-
-.tabControll>ul.tabmenu {
+.tabControll>.tabPanel {
+    width:100%;
+}
+.tabControll>.tabPanel >ul.tabmenu {
     float:left;
 	list-style:none;
     background-color:white;
 }
-.tabControll>ul.tabmenu:after {
+.tabControll>.tabPanel>ul.tabmenu:after {
     clear:both;
 }
-.tabControll>ul.tabmenu>li {
+.tabControll>.tabPanel>ul.tabmenu>li {
     float:left;
     height:1.5em;
 	padding: 0 20px; 
@@ -34,11 +30,11 @@
     border-radius:4px 4px 0 0;
     border:1px solid black;
 }
-.tabControll>ul.tabmenu>li:hover {
+.tabControll>.tabPanel>ul.tabmenu>li:hover {
     background:gray;
     color:white;
 }
-.tabControll>ul.tabmenu>li.selected {
+.tabControll>.tabPanel>ul.tabmenu>li.selected {
     font-style: bold;
     background-color:navy;
     color:white;
@@ -46,7 +42,6 @@
 /* タブコンテンツ */
 .tabControll>ul.tabcontents {
     clear:both;
-    height: 88%;
     padding:10px;
 	list-style:none;
     border: 1px dotted gray;
