Record sort default param bug-fic. Template %link cannot enabled class. Markdown Convert sequence change. PRE,TEXTAREA text disabled HTML specialchars.

--- a/Core/Template/res/css/markdown.css
+++ b/Core/Template/res/css/markdown.css
@@ -5,8 +5,8 @@
 }
 .easy_markdown a.externalLink {
   display: inline-block;
-  padding-right: 20px;
-  background: url(res/img/icon_external.png) no-repeat right center;
+  padding-right: 14px;
+  background: url(res/img/icon_external12.png) no-repeat right center;
 }
 
 /* CODE viewing 
