allow template Var will be multi-byte name. add Tabset Sticky Plugin.

--- a/Core/Template/res/css/tabset.css
+++ b/Core/Template/res/css/tabset.css
@@ -11,6 +11,9 @@
 }
 .tabControll>.tabPanel {
     width:100%;
+    height:1.5em;
+    border-bottom:1px solid gray;
+    background-color:white;
 }
 .tabControll>.tabPanel >ul.tabmenu {
     float:left;
