--- a/Core/Template/res/css/libstyle.css
+++ b/Core/Template/res/css/libstyle.css
@@ -35,24 +35,22 @@ html, body {
 .button	{
 	z-index:1;
 	border-top: 1px solid #ccc;
-	border-right: 1px solid #999;
-	border-bottom: 1px solid #999;
 	border-left: 1px solid #ccc;
+	border-right: 1px solid #333;
+	border-bottom: 2px solid #333;
 	padding: 2px 8px;
 	font-weight: bold;
 	font-size:9pt;
 	cursor: pointer;
-	color: #666;
+	color: #444;
 	text-align:center;
 	border-radius: 2px;
-	text-shadow: 0 -1px 1px #FFF, -1px 0 1px #FFF, 1px 0 1px #aaa;
+/*	text-shadow: 0 -1px 1px #FFF, -1px 0 1px #FFF, 1px 0 1px #aaa; */
 	box-shadow: 1px 1px 2px #E7E7E7;
-	background: -moz-linear-gradient(top, #fff, #F1F1F1 1%, #F1F1F1 50%, #DFDFDF 99%, #ccc);
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(0.01, #F1F1F1), color-stop(0.5, #F1F1F1), color-stop(0.99, #DFDFDF), to(#ccc));
+    background: linear-gradient(to bottom, white, silver);
 }
 .button:hover {
-	background: -moz-linear-gradient(top, #fff, #e1e1e1 1%, #e1e1e1 50%, #cfcfcf 99%, #ccc);
-	background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(0.01, #e1e1e1), color-stop(0.5, #e1e1e1), color-stop(0.99, #cfcfcf), to(#ccc));
+    background: linear-gradient(to bottom, silver, white);
 }
 .button:active {
 	background: #aaa;  
