--- a/Core/Template/res/css/debugbar.css
+++ b/Core/Template/res/css/debugbar.css
@@ -11,6 +11,7 @@
     color: white;
     border-bottom-left-radius: 10px;
     box-shadow: 1px 1px 2px black;
+    display:none;
 }
 /* メニュー表示 */
 .debugtab ul#debugMenu {
