--- a/tools/app_sample/View/res/css/blogstyle.css
+++ b/tools/app_sample/View/res/css/blogstyle.css
@@ -180,7 +180,7 @@ body {
 .profile {
     z-index: 1;
     width:100%;
-    height: 150px;
+    height: 20em;
     border:1px solid black;
     background-color: white;
 }
