--- a/Core/Template/res/css/dropfile.css
+++ b/Core/Template/res/css/dropfile.css
@@ -16,11 +16,12 @@
     z-index:1;
     position: absolute;
     display:block;
-    width:400px;
+    width:40%;
     top:25%;
     left:0;
     right:0;
     padding:10px;
+    overflow: hidden;
     margin-left: auto;
     margin-right: auto;
     border:2px solid black;
